fix(table): listtooblar setting icon dark mode

--- a/packages/form/src/layouts/LightFilter/index.less
+++ b/packages/form/src/layouts/LightFilter/index.less
@@ -29,11 +29,6 @@
     &:not(:last-child) {
       margin-right: 8px;
     }
-
-    .@{ant-prefix}-form-item {
-      color: rgba(0, 0, 0, 0.65);
-    }
-
     margin-top: 8px;
   }
 
