--- a/packages/table/src/component/ListToolBar/index.less
+++ b/packages/table/src/component/ListToolBar/index.less
@@ -27,13 +27,9 @@
     align-items: center;
   }
 
-  // &-setting-items {
-  //   margin-left: @margin-md;
-  // }
-
   &-setting-item {
     font-size: @font-size-lg;
-    color: fade(@black, 65%);
+    color: @icon-color-hover;
     cursor: pointer;
   }
 
